--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "ctrl",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Intercept 3I/ATLAS mission API",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
